getRecipient via soap service feature implemented